# dotjock-com-toolkit

./: .gitattributes  .gitignore  README.md  analyze.mjs  analyzer.mjs  config.json  config.yaml  crawler.mjs  package.json  page-analysis.csv  report-aggregator.mjs  rule.json  seolint.config.mjs  server.mjs
scripts/: SEO.sh
seo/: Cargo.toml
seo-analysis/: cli.js  crawler.js  package-lock.json  package.json  seoAnalyzer.js  server.js
seo-analysis/.yarn/releases/: yarn-4.10.3.cjs
seo-analysis/scripts/: SEO.sh
seo/seo-cli/: Cargo.toml
seo/seo-cli/src/: crawler.rs  generatereport.rs  main.rs  robots.rs  sitemap.rs
seo/src/: crawler.rs  generatereport.rs  main.rs  sitemap.rs
