[package]
name = "seo-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
select = "0.5"
url = "2.2"
regex = "1"
genpdf = { version = "0.2.0" }
indicatif = "0.17"
log = "0.4"
env_logger = "0.10"
console = "0.15"
